<resources>
    <string-array name="maturitySpinner">
        <item> </item>
        <item>0-1 anos</item>
        <item>1-2 anos</item>
        <item>2-3 anos</item>
        <item>3 anos ou mais</item>
        <item>Pronto para abate</item>
    </string-array>
    <string-array name="breedSpinner">
        <item> </item>
        <item>Bovinos</item>
        <item>Equinos</item>
        <item>Ovinos</item>
        <item>Suínos</item>
    </string-array>
    <string name="app_name">Boi no Bolso V0.2</string>
    <string name="slogan">O app de venda de gado do pecuarista brasileiro!</string>
    <string name="logo">Boi no Bolso</string>
    <string name="senha">Senha</string>
    <string name="preencha_para_continuar">Preencha para continuar</string>
    <string name="email">Email</string>
    <string name="ola_bem_vindo_ao_boi_no_bolso">Olá, Bem vindo ao boi no bolso!</string>
    <string name="esqueci_a_senha">Esqueci minha senha</string>
    <string name="entrar">Entrar</string>
    <string name="novo_por_aqui_criar_conta">Novo por aqui? Criar conta</string>
    <string name="escolha_como_quer_se_registrar">Escolha como quer se registrar</string>
    <string name="registro_com_google">REGISTRO COM GOOGLE</string>
    <string name="registro_com_telefone">REGISTRO COM TELEFONE</string>
    <string name="registro_com_email">REGISTRO COM EMAIL</string>
    <string name="registro_com_facebook">REGISTRO COM FACEBOOK</string>
    <string name="logo_boi_no_bolso">Logo boi no bolso</string>
    <string name="botao_login_com_google">Botao login com google</string>
    <string name="botao_registro_com_facebook">Botao registro com facebook</string>
    <string name="botao_registro_com_numero_de_celular">Botao registro com numero de celular</string>
    <string name="telefone">Telefone</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="remember_me">Salvar dados</string>
    <string name="nome_de_usuario">Nome de usuário</string>
    <string name="proximo">Próximo</string>
    <string name="escolha_seu_sexo">Escolha seu sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="sexo">Sexo</string>
    <string name="criar_nconta">Criar \nconta</string>
    <string name="nome_completo">Nome completo</string>
    <string name="botao_de_voltar">botão de voltar</string>
    <string name="insira_seu_numero_de_telefone">Insira seu numero de telefone</string>
    <string name="digite_aqui_o_codigo_recebido">Digite aqui o código recebido</string>
    <string name="digite_o_codigo_de_verifica_o_caso_nao_seja_verificado_automaticamente">Digite o código de verificação caso não seja verificado automaticamente</string>
    <string name="verificar_numero_de_telefone">Verificar numero de telefone</string>
    <string name="verificar_codigo">Verificar código</string>
    <string name="senha_alterada_com_sucesso">Senha alterada com sucesso</string>
    <string name="sua_senha_foi_alterada_com_sucesso">Sua senha foi alterada com sucesso</string>
    <string name="login">Login</string>
    <string name="nova_senha">Nova senha</string>
    <string name="nova_senha_desc">Sua identidade foi verificada! digite sua nova senha no campo abaixo</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="ok">Ok</string>
    <string name="reset_de_senha_desc">Digite seu numero de telefone e receba o codigo para resetar sua senha</string>
    <string name="inicio">Início</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="categorias">Categorias</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="sair">Sair</string>
    <string name="avalie_nos">Avalie-nos</string>
    <string name="compartilhe">Compartilhe</string>
    <string name="boi_no_bolso">Boi no Bolso</string>
    <string name="inicio_caps">INÍCIO</string>
    <string name="pesquisar_caps">PESQUISAR</string>
    <string name="categorias_caps">CATEGORIAS</string>
    <string name="perfil">Perfil</string>
    <string name="entrar_caps">ENTRAR</string>
    <string name="minha_conta_caps">MINHA CONTA</string>
    <string name="sair_caps">SAIR</string>
    <string name="bovinos_caps">BOVINOS</string>
    <string name="equinos_caps">EQUINOS</string>
    <string name="ovinos_caps">OVINOS</string>
    <string name="suinos_caps">SUINOS</string>
    <string name="outros">Outros</string>
    <string name="compartilhe_caps">COMPARTILHE</string>
    <string name="avalie_nos_caps">AVALIE-NOS</string>
    <string name="bois_angus">Bois Angus</string>
    <string name="criar_anuncio">Criar Anúncio</string>
    <string name="quantidade_de_animais">Quantidade de animais</string>
    <string name="selecionar_imagem_do_an_ncio">Selecionar imagem do anúncio</string>
    <string name="selecione_o_tipo_de_animal">Selecione o tipo de animal :</string>
    <string name="selecione_a_idade_media_dos_animais">Selecione a idade média dos animais :</string>
    <string name="digite_o_titulo_aqui">Digite o titulo aqui</string>
    <string name="endereco_desc">Endereço :</string>
    <string name="endereco_hint">Digite seu endereço aqui</string>
    <string name="bairro">Bairro :</string>
    <string name="bairro_hint">Digite seu bairro aqui</string>
    <string name="cidade">Cidade :</string>
    <string name="cidade_hint">Digite sua cidade aqui</string>
    <string name="digite_seu_cep_aqui">Digite seu CEP aqui</string>
    <string name="cep">CEP :</string>
    <string name="estado">Estado</string>
    <string name="permitir_venda_de_unidades_separadas">Permitir venda de unidades separadas</string>
    <string name="opcoes_de_venda">Opções de venda</string>
    <string name="finalizar">Finalizar</string>
    <string name="digite_a_raca_dos_animais">Digite a raça dos animais :</string>
    <string name="digite_a_raca_aqui">Digite a raça aqui</string>
    <string name="preco_total">Preço total:</string>
    <string name="anuncios_de_bovinos">Anúncios de Bovinos</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="no_content">No content</string>
    <string-array name="breeds">
        <item>Angus</item>
        <item>Nelore</item>
        <item>Brahman</item>
        <item>Brangus</item>
        <item>Senepol</item>
        <item>Hereford</item>
        <item>Caracu</item>
        <item>Charolês</item>
        <item>Guzerá</item>
        <item>Tabapuã</item>
        <item>Simental</item>
        <item>Limousin</item>
        <item>Chianina</item>
        <item>Devon</item>
        <item>Belgian Blue</item>
        <item>Wagyu</item>
        <item>Corriedale</item>
        <item>Romney Marsh</item>
        <item>Border Leicester</item>
        <item>Suffolk</item>
        <item>Hampshire Down</item>
        <item>Ile de France</item>
        <item>Texel</item>
        <item>Poll Dorset</item>
        <item>Santa Inês</item>
        <item>Morada Nova</item>
        <item>Bergamácia</item>
        <item>DUROC</item>
        <item>PIETRAIN</item>
        <item>HAMPSIRE</item>
        <item>LANDRACE</item>
        <item>LARGE WHITE</item>
        <item>WESSEX</item>
        <item>Piau</item>
        <item>Mouro </item>
        <item>Estrela</item>
        <item>Nilo</item>
        <item>Piratininga</item>
        <item>Canastra</item>
        <item>Appaloosa</item>
        <item>Campolina</item>
        <item>Bretão</item>
        <item>Lusitano</item>
        <item>Mangalarga</item>
        <item>Mangalarga Machador</item>
        <item>Nordestino</item>
        <item>Pampa</item>
        <item>Lusitano</item>
        <item>Quarto de Milha</item>
        <item>Akhal-Teke</item>
        <item>Lusitano</item>
    </string-array>
    <string-array name="ufs">
        <item>Selecione um Estado</item>
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>
</resources>