<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".Activities.LoginSignup.ChooseRegistrationType">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="187dp"
            android:layout_height="211dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/logo_boi_no_bolso"
            app:srcCompat="@drawable/logo_sem_fundo" />

        <TextView
            android:id="@+id/txtLogo"
            android:layout_width="361dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/bangers"
            android:text="@string/escolha_como_quer_se_registrar"
            android:textAlignment="center"
            android:textSize="28sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleRegBtn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:text="@string/registro_com_google"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:icon="@drawable/google_logo_adicionado" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/telRegBtn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:text="@string/registro_com_telefone"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:icon="@drawable/baseline_phone_24"
            app:iconSize="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/emailRegBtn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:text="@string/registro_com_email"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:icon="@drawable/baseline_email_24"
            app:iconSize="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebookRegBtn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:elevation="8dp"
            android:text="@string/registro_com_facebook"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:icon="@drawable/facebook_logo_sem_fundo"
            app:iconSize="25dp" />

    </LinearLayout>

</ScrollView>