<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginSignup.Login"
    android:background="@color/white"
    android:transitionName="transition_login"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo_sem_fundo"
            android:transitionName="logo_image"
            android:contentDescription="@string/logo_boi_no_bolso"/>

        <TextView
            android:id="@+id/logoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:text="@string/ola_bem_vindo_ao_boi_no_bolso"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:transitionName="logo_text" />

        <TextView
            android:id="@+id/sloganText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preencha_para_continuar"
            android:textSize="18sp"
            android:fontFamily="@font/antic"
            android:transitionName="logo_desc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.hbb20.CountryCodePicker
                android:id="@+id/login_country_code_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_rememberLastSelection="true"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="true"
                app:ccp_showFullName="true"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_border"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/login_phone_number"
                android:hint="@string/telefone"
                app:startIconDrawable="@drawable/baseline_phone_24"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                android:transitionName="input_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_phone_number_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/login_password"
                android:hint="@string/senha"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/baseline_password_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="input_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/login_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

            <CheckBox
                android:id="@+id/login_remember_me"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:text="@string/remember_me"
                android:textColor="@color/black"
                android:checked="true"/>

                <Button
                    android:id="@+id/login_forget_password_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="0dp"
                    android:background="#00000000"
                    android:text="@string/esqueci_minha_senha"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/login_login_btn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="30dp"
                android:text="@string/entrar"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/green"
                android:transitionName="login_btn"/>

            <Button
                android:id="@+id/login_signin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00000000"
                android:elevation="0dp"
                android:text="@string/novo_por_aqui_criar_conta"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/antic"
                android:transitionName="signup_btn"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>